<resources>
<!--  General  -->
    <string name="app_name">Polydroid</string>
    <string name="navigation">Navigation</string>
    <string name="schedule">Schedule</string>
    <string name="contacts">Contacts</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="close">Close</string>
    <string name="settings">Settings</string>

<!--  Preferences  -->
    <string name="enable_notifications">Enable notifications</string>
    <string name="notifications_target">Notifications target</string>
    <string name="group_or_teacher_to_notify_schedule_changes">Group or teacher name to notify schedule changes</string>
    <string name="enter_a_group_or_teacher_name">Enter a group or teacher name</string>
    <string name="build_version">Build version</string>
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="skip">Skip</string>
    <string name="initialization_helper">After you can change it in settings</string>
    <string name="initialization_header">You must specify group number or teacher name to get schedule update notifications. You also may search for another schedules, but notifications you will get by this key</string>
    <string name="group_number_or_teacher_name">Group number or teacher name</string>
    <string name="invalidate_cache">Invalidate cache</string>
    <string name="cache_size_bytes">Cache size %1$s Bytes</string>
    <string name="cache_size_kbytes">Cache size %1$s KBytes</string>
    <string name="cache_size_mbytes">Cache size %1$s MBytes</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>

<!--  ContactsFragment  -->
    <string name="contacts_load_error">Unable to get contacts</string>

<!--  ScheduleFragment  -->
    <string name="current_week">Current week</string>
    <string name="full_schedule">Full schedule</string>
    <string name="no_lessons_today">No lessons today</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="application">Application</string>
    <string name="cached_schedule">"Cached schedule from %1$s"</string>
    <string name="range_placeholder">"%1$s - %2$s"</string>
    <string name="loading_schedule">Loading schedule&#8230;</string>
    <string name="schedule_start_message">Click$icon$ for search group, teacher or classroom schedule</string>
    <string name="schedule_empty_result_session">No schedule found for %s.\nYou may try to find semester schedule.\nClick$icon$ and set \"Use session schedule\" to False</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="loading_error">Loading error</string>
    <string name="permission_notification">Some required permissions not granted</string>
    <string name="search_by">Search by</string>
    <string name="please_fill_this_field">Please fill this field</string>

<!--  Notifications  -->
    <string name="default_notification_channel_name">Schedule changes notifications</string>
    <string name="default_notification_channel_description">Notify you about changes in schedule</string>

    <string name="no_lesson">No lesson</string>
    <string name="become">become</string>
    <string name="style_of_drawing_lesson_units">Style of drawing lesson units</string>
    <string name="no_lessons_on_this_week">No lessons on current week.\nYou may open full schedule</string>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="time_morning">
        <item>9:00&#8211;10:30</item>
        <item>10:40&#8211;12:10</item>
        <item>12:20&#8211;13:50</item>
        <item>14:30&#8211;16:00</item>
        <item>16:10&#8211;17:40</item>
        <item>17:50&#8211;19:20</item>
        <item>19:30&#8211;21:00</item>
    </string-array>

    <string-array name="time_evening">
        <item>9:00&#8211;10:30</item>
        <item>10:40&#8211;12:10</item>
        <item>12:20&#8211;13:50</item>
        <item>14:30&#8211;16:00</item>
        <item>16:10&#8211;17:40</item>
        <item>18:20&#8211;19:40</item>
        <item>19:50&#8211;21:10</item>
    </string-array>

    <string-array name="target_type_entries">
        <item>@string/student</item>
        <item>@string/teacher</item>
    </string-array>

    <string-array name="target_type_values">
        <item>student</item>
        <item>teacher</item>
    </string-array>
    <string name="schedule_empty_result_semester">No schedule found for %s. You may try to find session schedule. Click$icon$ and set \"Use session schedule\" to True</string>
    <string name="use_session_schedule">Use session schedule</string>
    <string name="notifications_list_style">Notifications list style</string>
</resources>
